[gd_scene load_steps=3 format=3 uid="uid://2wh1w5oecrxg"]

[ext_resource type="Script" path="res://demo/canvas_layer.gd" id="1_xqe7h"]
[ext_resource type="Texture2D" uid="uid://b8e8t4mlv4fvt" path="res://Assets/Textures/icons8-add-100.png" id="2_xqof8"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_xqe7h")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.792157, 0, 0.27451, 0.929412)
metadata/_edit_use_anchors_ = true

[node name="Create UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Host" type="Button" parent="Create UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -191.0
offset_top = -190.0
offset_right = 196.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 55
text = "Host"

[node name="Join" type="Button" parent="Create UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -191.0
offset_top = 36.0
offset_right = 196.0
offset_bottom = 185.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 55
text = "Join"

[node name="Lobby" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Team L" type="VBoxContainer" parent="Lobby"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -219.0
offset_right = 548.0
offset_bottom = 354.0
grow_vertical = 2
theme_override_constants/separation = 300

[node name="Player 1" type="Control" parent="Lobby/Team L"]
layout_mode = 2
size_flags_vertical = 4

[node name="TextureButton" type="TextureButton" parent="Lobby/Team L/Player 1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_right = 64.0
offset_bottom = 128.0
grow_horizontal = 2
texture_normal = ExtResource("2_xqof8")
stretch_mode = 3

[node name="Name" type="Label" parent="Lobby/Team L/Player 1"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.0
offset_top = 124.0
offset_right = 18.0
offset_bottom = 149.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Ram"
horizontal_alignment = 1

[node name="Player 2" type="Control" parent="Lobby/Team L"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureButton" type="TextureButton" parent="Lobby/Team L/Player 2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_right = 64.0
offset_bottom = 128.0
grow_horizontal = 2
texture_normal = ExtResource("2_xqof8")
stretch_mode = 3

[node name="Name" type="Label" parent="Lobby/Team L/Player 2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.0
offset_top = 124.0
offset_right = 18.0
offset_bottom = 149.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "
"
horizontal_alignment = 1

[node name="Team D" type="VBoxContainer" parent="Lobby"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -548.0
offset_top = -220.0
offset_bottom = 357.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 300

[node name="Player 1" type="Control" parent="Lobby/Team D"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureButton" type="TextureButton" parent="Lobby/Team D/Player 1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_right = 64.0
offset_bottom = 128.0
grow_horizontal = 2
texture_normal = ExtResource("2_xqof8")
stretch_mode = 3

[node name="Name" type="Label" parent="Lobby/Team D/Player 1"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.0
offset_top = 124.0
offset_right = 18.0
offset_bottom = 149.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "
"
horizontal_alignment = 1

[node name="Player 2" type="Control" parent="Lobby/Team D"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureButton" type="TextureButton" parent="Lobby/Team D/Player 2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_right = 64.0
offset_bottom = 128.0
grow_horizontal = 2
texture_normal = ExtResource("2_xqof8")
stretch_mode = 3

[node name="Name" type="Label" parent="Lobby/Team D/Player 2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.0
offset_top = 124.0
offset_right = 18.0
offset_bottom = 149.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="Label L" type="Label" parent="Lobby"]
layout_mode = 0
offset_left = 168.0
offset_top = 22.0
offset_right = 360.0
offset_bottom = 101.0
theme_override_font_sizes/font_size = 55
text = "Team L"

[node name="Label L2" type="Label" parent="Lobby"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -375.0
offset_top = 20.0
offset_right = -173.0
offset_bottom = 99.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 55
text = "Team D"

[node name="Start" type="Button" parent="Lobby"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.5
offset_top = -42.0
offset_right = 70.5
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 55
disabled = true
text = "PLAY"

[connection signal="pressed" from="Create UI/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Create UI/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Lobby/Team L/Player 1/TextureButton" to="." method="_on_texture_button_pressed" binds= [{
"Player": 1,
"team": "L"
}]]
[connection signal="pressed" from="Lobby/Team L/Player 2/TextureButton" to="." method="_on_texture_button_pressed" binds= [{
"Player": 2,
"team": "L"
}]]
[connection signal="pressed" from="Lobby/Team D/Player 1/TextureButton" to="." method="_on_texture_button_pressed" binds= [{
"Player": 3,
"team": "D"
}]]
[connection signal="pressed" from="Lobby/Team D/Player 2/TextureButton" to="." method="_on_texture_button_pressed" binds= [{
"Player": 4,
"team": "D"
}]]
